guestbook/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui
spec:
  selector:
    matchLabels:
      app: guestbook-ui
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
      - name: guestbook-ui
        image: gcr.io/heptio-images/ks-guestbook-demo:0.2
        resources:
          requests:
            cpu: 150m
            memory: 150Mi
          limits:
            cpu: 150m
            memory: 150Mi
