guestbook/overlays/prod/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: guestbook-ui-prod-rollout
spec:
  replicas: 3
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
      - name: guestbook-ui
        image: gcr.io/heptio-images/ks-guestbook-demo:0.2
        ports:
        - containerPort: 80
  minReadySeconds: 30
  revisionHistoryLimit: 3
  strategy:
    canary:
      canaryService: guestbook-ui-canary  # required
      stableService: guestbook-ui-primary  # required
      trafficRouting:
        istio:
          virtualService:
            name: guestbook-ui   # required
            routes:
            - primary
          destinationRule:
            name: guestbook-ui-prod-rollout-destrule    # required
            canarySubsetName: canary  # required
            stableSubsetName: stable  # required            # optional if there is a single route in VirtualService, required otherwise
      steps:
      - setWeight: 5
      - pause:
          duration: 10m
