guestbook/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui-primary
spec:
  ports:
  - name: http-guestbook-ui
    port: 80
  selector:
    app: guestbook-ui-prod-rollout
---
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui-canary
spec:
  ports:
  - name: http-guestbook-ui
    port: 80
  selector:
    app: guestbook-ui-prod-rollout
