guestbook/overlays/prod/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: guestbook-ui-gateway
  namespace: prod
spec:
  selector:
    app: guestbook-ui
  servers:
  - port:
      number: 9081
      name: http
      protocol: HTTP
    hosts:
      - guestbook-ui-prod-rollout.prod.cluster.local
