guestbook/overlays/prod/destinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: guestbook-ui-prod-rollout-destrule
spec:
  host: guestbook-ui-prod-rollout.prod.svc.cluster.local
  subsets:
  - name: canary   # referenced in canary.trafficRouting.istio.destinationRule.canarySubsetName
    labels:        # labels will be injected with canary rollouts-pod-template-hash value
      app: guestbook-ui-prod-rollout
  - name: stable   # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
    labels:        # labels will be injected with stable rollouts-pod-template-hash value
      app: guestbook-ui-prod-rollout
