guestbook/overlays/prod/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guestbook-ui
spec:
  gateways:
  - guestbook-ui-gateway
  hosts:
  - "*"
  http:
  - name: primary        # referenced in canary.trafficRouting.istio.virtualService.routes
    route:
    - destination:
        subset: stable
        host: guestbook-ui # referenced in canary.stableService
        port: 
          number: 9081
      weight: 100
    - destination:
        subset: canary
        host: guestbook-ui # referenced in canary.canaryService
        port:
          number: 9081
      weight: 0
